--- a/src/views/mentor/index.scss
+++ b/src/views/mentor/index.scss
@@ -1,5 +1,8 @@
 #mentor {
   position: relative;
+  .nav-info{
+    width: 810px;
+  }
   .title .title-info {
     width: 655px;
     font-size: 16px;
