--- a/src/components/qrcode/index.scss
+++ b/src/components/qrcode/index.scss
@@ -12,7 +12,7 @@
 
 #qrcode {
   top: 600px;
-  right: 19px;
+  right: 50px;
   z-index: 99;
   clear: both;
   display: table;
@@ -57,7 +57,8 @@
   .hoverBtn {
     width: 80px;
     width: 80px;
-    opacity: 0.75;
+    opacity: 1;
+    transition: all .3s;
     .qr-thum {
       padding: 8px;
       background-color: #fff;
@@ -68,7 +69,7 @@
       display: inline-block;
     }
     .hoverBtn{
-      opacity: 1;
+      opacity: .75;
     }
   }
   .hoverBtn {
