--- a/src/views/upload/index.scss
+++ b/src/views/upload/index.scss
@@ -1,53 +1,54 @@
-.wrap-upload{
-  .info{
-    margin-top:90px;
+.wrap-upload {
+  .info {
+    margin-top: 90px;
     width: 613px;
     padding-right: 30px;
-    .nav-info{
+    .nav-info {
       width: 580px;
     }
-    form{
+    form {
       margin-top: 20px;
       font-size: 16px;
-      .form-line{
+      .form-line {
         width: 100%;
         margin-top: 10px;
-        clear:both;
-        display:table;
-        &.submit{
-          label{
+        clear: both;
+        display: table;
+        &.submit {
+          label {
             background: none;
           }
         }
       }
-      input[type="text"], textarea{
+      input[type="text"],
+      textarea {
         background-color: #d7e2ff;
       }
-      label{
+      label {
         float: left;
-        display:inline-block;
+        display: inline-block;
         width: 110px;
-        height:38px;
+        height: 38px;
         text-align: center;
         line-height: 38px;
         color: #fff;
         background-color: #0e3b73;
         vertical-align: top;
       }
-      input[type="text"]{
+      input[type="text"] {
         float: left;
         width: 481px;
         height: 38px;
         font-size: 16px;
         padding-top: 0;
         padding-bottom: 0;
-        border:none;
+        border: none;
         padding-left: 10px;
         background-color: #d7e2ff;
         color: #041540;
       }
-      textarea{
-        border:none;
+      textarea {
+        border: none;
         width: 480px;
         padding-left: 10px;
         padding-top: 10px;
@@ -56,28 +57,44 @@
         color: #041540;
         font-size: 18px;
       }
-      input.verification{
+      input.verification {
         width: 310px;
       }
-      input.get{
+      input.get {
         font-size: 18px;
         width: 135px;
         height: 38px;
         color: #fff;
         background-color: #2471dd;
-        border:none;
+        border: none;
         float: left;
         margin-left: 36px;
       }
-      input.next, input.submit{
+      input.next,
+      input.submit {
         cursor: pointer;
         width: 140px;
         height: 50px;
         background-color: #2471dd;
-        color:#fff;
+        color: #fff;
         font-size: 22px;
         border: none;
+        float: left;
       }
     }
   }
+}
+
+.download {
+  display: block;
+  width: 220px;
+  height: 50px;
+  line-height: 50px;
+  background: #2471dd;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+  font-size: 22px;
+  float: left;
+  margin-left: 40px;
 }
