--- a/src/views/cooperation/index.scss
+++ b/src/views/cooperation/index.scss
@@ -4,12 +4,11 @@
       width: 750px;
     }
     .title {
-      font-size: 18px;
       margin-top: 20px;
     }
     ul {
       margin-top: 20px;
-      width: 100%;
+      width: 750px;
       padding: 0;
       clear: both;
       display: table;
@@ -24,4 +23,8 @@
       }
     }
   }
+}
+
+.mt10{
+  margin-top:10px;
 }
