--- a/src/views/rule/index.scss
+++ b/src/views/rule/index.scss
@@ -1,6 +1,6 @@
 #rule {
   .info {
-    width: 770px;
+    width: 990px;
     .info-title.first {
       margin-top: 0;
     }
@@ -10,8 +10,6 @@
     }
     .info-title {
       margin-top: 30px;
-      color: #2b85f6;
-      font-size: 18px;
     }
     .info-main {
       margin-top: 10px;
@@ -27,7 +25,7 @@
       p {
         .color {
           display:inline-block;
-          color: #2b85f6;
+          color: #136fe4;
           margin-top: 15px;
         }
         &.title{
