--- a/src/styles/animation.scss
+++ b/src/styles/animation.scss
@@ -121,3 +121,51 @@
     transform: translateY(0)
   }
 }
+
+@keyframes updown {
+  0% {
+    transform: translateY(-20px);
+  }
+  50% {
+    transform: translateY(20px);
+  }
+  100% {
+    transform: translateY(-20px);
+  }
+}
+
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes planet {
+  0% {
+    transform: translateY(-20px);
+    transform: rotateZ(0deg);
+  }
+  50% {
+    transform: translateY(20px);
+    transform: rotateZ(-20deg);
+  }
+  100% {
+    transform: translateY(-20px);
+    transform: rotateZ(0deg);
+  }
+}
+@keyframes leftRight {
+  0% {
+    transform: translateX(-20px);
+  }
+  50% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(-20px);
+  }
+}
