--- a/src/views/award/index.scss
+++ b/src/views/award/index.scss
@@ -3,15 +3,17 @@
   clear: both;
   display:inline-block;
   overflow-y: scroll;
-  .number{
-    font-size: 18px;
-  }
   .title {
-    color: #6cadff;
-    font-size: 18px;
     margin-top: 30px;
     &:first-child{
       margin: 0;
+    }
+  }
+  ul.other{
+    li{
+      text-align: left;
+      display: block;
+      padding:3px 0;
     }
   }
   ul {
@@ -21,7 +23,7 @@
     padding: 0;
     li {
       float: left;
-      text-align: left;
+      text-align: center;
       .item-inner{
         float:left;
         text-align:center;
@@ -43,7 +45,7 @@
   ul.comprehensive{
     width: 100%;
     li{
-      width: 24%;
+      width: 25%;
     }
   }
   ul.single{
@@ -57,8 +59,6 @@
   }
   .ranking {
     margin-top: 5px;
-    font-size: 16px;
-    font-weight: bold;
   }
   .gold {
     .color {
