--- a/src/views/introduce/index.scss
+++ b/src/views/introduce/index.scss
@@ -1,12 +1,11 @@
 .timeline {
   position: relative;
-  margin-top: 110px;
+  margin-top: 70px;
   width: 900px;
   height: 70px;
   background: url(../../../ossweb-img/image/timeline-2.png) no-repeat;
   background-position-x: 70px;
   background-position-y: 25px;
-  font-size: 16px;
   .line {
     margin-left: 40px;
   }
@@ -58,7 +57,7 @@
         top: 20px;
         left: 580px;
         .point {
-         top:10px;
+          top: 10px;
         }
         .info {
           left: 10px;
@@ -69,11 +68,11 @@
         top: 5px;
         left: 750px;
         .point {
-          left:0;
+          left: 0;
         }
         .info {
           top: -50px;
-          left:10px;
+          left: 10px;
         }
       }
       p {
@@ -85,44 +84,47 @@
 }
 
 .tab-content {
-  margin-top: 75px;
-  width:990px;
+  margin-top: 65px;
+  width: 990px;
   .tab {
-    font-size: 16px;
     span {
       line-height: 40px;
       display: inline-block;
       width: 170px;
-      color: #2b85f6;
+      color: #136fe4;
       cursor: pointer;
-      text-align:center;
+      text-align: center;
       background-color: #0e3b73;
       &.selected {
-        background-color: #116fe1;
+        background-color: #136fe4;
         color: #fff;
       }
     }
   }
   .info {
     margin-top: 20px;
+    span {
+      font-size: 14px;
+    }
     p {
       margin: 5px 0;
     }
-    .info-1{
-      p{
-        width:640px;
+    .info-1 {
+      p {
+        width: 640px;
         margin-top: 10px;
         text-align: justify;
       }
     }
-    .left{
-      width:640px;
-      p, ul{
-        width:85%;
+    .left {
+      width: 640px;
+      p,
+      ul {
+        width: 85%;
       }
     }
-    .right{
-      width:640px;
+    .right {
+      width: 640px;
       margin-top: 30px;
     }
     ul {
@@ -131,24 +133,22 @@
       li {
         position: relative;
         margin: 5px 0;
-        padding-left: 20px;
         span {
           position: absolute;
-          left:0;
-          top:2px;
+          left: 0;
+          top: 2px;
           display: inline-block;
           width: 17px;
           height: 17px;
           margin-right: 10px;
-          background-color: #2b85f6;
+          background-color: #136fe4;
           text-align: center;
           border-radius: 50%;
-          font-size: 14px;
         }
       }
     }
   }
-  .down-tempalte{
+  .down-tempalte {
     margin-top: 50px;
   }
   .download {
@@ -163,7 +163,6 @@
     color: #fff;
     text-align: center;
     text-decoration: none;
-    font-size: 22px;
     padding-left: 20px;
   }
 }
