--- a/src/views/mentor/index.scss
+++ b/src/views/mentor/index.scss
@@ -5,7 +5,6 @@
   }
   .title .title-info {
     width: 655px;
-    font-size: 16px;
   }
   .info {
     position: relative;
@@ -25,7 +24,7 @@
         margin-left: 0;
       }
       .image {
-        border: 4px solid #2471dd;
+        border: 4px solid #136fe4;
         width: 192px;
         height: 186px;
         overflow: hidden;
@@ -34,11 +33,7 @@
         width: 100%;
         height:auto;
       }
-      .name {
-        font-size: 16px;
-      }
       .info {
-        font-size: 14px;
         margin-top: 0;
       }
     }
@@ -48,6 +43,7 @@
     height: 50px;
     color: #fff;
     background-color: #2471dd;
+    font-weight: bold;
   }
   .swiper-button-prev,
   .swiper-button-next {
