--- a/src/views/upload/index.scss
+++ b/src/views/upload/index.scss
@@ -8,7 +8,6 @@
     }
     form {
       margin-top: 20px;
-      font-size: 16px;
       .form-line {
         width: 100%;
         margin-top: 10px;
@@ -39,7 +38,6 @@
         float: left;
         width: 481px;
         height: 38px;
-        font-size: 16px;
         padding-top: 0;
         padding-bottom: 0;
         border: none;
@@ -61,11 +59,10 @@
         width: 310px;
       }
       input.get {
-        font-size: 18px;
         width: 135px;
         height: 38px;
         color: #fff;
-        background-color: #2471dd;
+        background-color: #136fe4;
         border: none;
         float: left;
         margin-left: 36px;
@@ -75,9 +72,8 @@
         cursor: pointer;
         width: 140px;
         height: 50px;
-        background-color: #2471dd;
+        background-color: #136fe4;
         color: #fff;
-        font-size: 22px;
         border: none;
         float: left;
       }
@@ -94,7 +90,6 @@
   color: #fff;
   text-align: center;
   text-decoration: none;
-  font-size: 22px;
   float: left;
   margin-left: 40px;
 }
