--- a/src/views/workInfo/index.scss
+++ b/src/views/workInfo/index.scss
@@ -1,5 +1,4 @@
 .nav-title {
-  font-size: 18px;
   .name {
     font-weight: bold;
   }
@@ -40,4 +39,11 @@ embed {
   margin-top: 50px;
   width: 640px;
   height: 500px;
+}
+
+
+.nav-guide{
+  font-size: 12px;
+  margin-bottom:15px;
+  cursor:pointer;
 }
