--- a/src/views/mentor/index.scss
+++ b/src/views/mentor/index.scss
@@ -6,11 +6,13 @@
   .title .title-info {
     width: 655px;
   }
+  .swiper-slide{
+    margin-top:30px;
+  }
   .info {
     position: relative;
     ul {
-      margin-top: 20px;
-      width: 660px;
+      width: 700px;
       padding-left: 72px;
       clear: both;
       display: inline-block;
@@ -18,7 +20,8 @@
     li {
       text-align: center;
       float: left;
-      margin-left: 30px;
+      margin-right: 30px;
+      margin-bottom: 20px;
       overflow: hidden;
       &:first-child {
         margin-left: 0;
