--- a/src/views/activityItems/index.scss
+++ b/src/views/activityItems/index.scss
@@ -6,7 +6,7 @@
       display: table;
     }
   }
-  .items{
+  .items {
     padding-top: 20px;
   }
   .item {
@@ -15,6 +15,13 @@
     margin-right: 25px;
     margin-bottom: 25px;
     cursor: pointer;
+    &:hover {
+      .link {
+        a {
+          text-decoration: underline;
+        }
+      }
+    }
     img {
       width: 100%;
       height: 175px;
