--- a/src/views/review/index.scss
+++ b/src/views/review/index.scss
@@ -19,6 +19,7 @@
       background-position: 2px 22px;
       margin-right: 35px;
       margin-top: 40px;
+      cursor: pointer;
       &:hover{
         .review-name{
           text-decoration: underline;
