--- a/src/views/award/index.scss
+++ b/src/views/award/index.scss
@@ -1,3 +1,17 @@
+#award{
+  .first-title{
+    position: relative;
+    vertical-align: bottom;
+    span{
+      position: absolute;
+      top:14px;
+      margin-left:10px;
+      font-size: 12px;
+      color: #fff;
+    }
+  }
+}
+
 .trophy {
   width: 100%;
   clear: both;
