--- a/ossweb-img/css/common.css
+++ b/ossweb-img/css/common.css
@@ -159,14 +159,14 @@ body {
   width: 242px;
   height: 61px;
   line-height: 61px;
-  color: #116fe1;
+  color: #fff;
   font-size: 28px;
   position: absolute;
   display: block;
   bottom: 20%;
   left: 50%;
   margin-left: -121px;
-  background-color: #fff;
+  background-color: rgba(17, 111, 225, 0.7);
   border-radius: 30px;
   text-align: center;
   text-decoration: none;
@@ -218,6 +218,7 @@ body {
 
 .swiper-slide {
   position: relative;
+  overflow: hidden;
 }
 
 .bg {
@@ -260,6 +261,7 @@ body {
 .swiper-slide .info .title {
   color: #ff5f4d;
   font-size: 48px;
+  transition: all 1.2s;
 }
 
 .slide-1 {
@@ -385,7 +387,7 @@ body {
   bottom: 34%;
   right: 13%;
   animation: planet 25s ease-in-out infinite;
-  z-index: 999;
+  z-index: -1;
   transition: all .5s;
 }
 
@@ -424,7 +426,7 @@ body {
   background-color: #000b28;
   transform: translate(-476px, -87px);
   opacity: 0;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 
 .envelope {
@@ -455,7 +457,7 @@ body {
   opacity: 0;
   line-height: 2;
   text-align: center;
-  transition: all 0.5s;
+  transition: all 1.2s;
 }
 .letter-paper p {
   line-height: 1.5;
@@ -482,7 +484,7 @@ body {
   margin-top: 50px;
   transform: translateY(200px);
   opacity: 0;
-  transition: all 0.5s;
+  transition: all 1.5s;
 }
 
 .info-fadeIn {
@@ -495,13 +497,12 @@ body {
 }
 
 .mentor {
-  width: 700px;
-  height: 600px;
+  width: 630px;
+  height: 540px;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-left: -350px;
-  margin-top: -250px;
+  transform: translate(-50%, -40%);
 }
 .mentor .mentor-1,
 .mentor .mentor-2,
@@ -509,9 +510,18 @@ body {
 .mentor .mentor-4,
 .mentor .mentor-5 {
   position: absolute;
+  float: left;
   overflow: hidden;
-  width: 200px;
-  height: 250px;
+  width: 180px;
+  height: 225px;
+}
+.mentor .mentor-1 img,
+.mentor .mentor-2 img,
+.mentor .mentor-3 img,
+.mentor .mentor-4 img,
+.mentor .mentor-5 img {
+  width: 100%;
+  height: 100%;
 }
 .mentor .mentor-1 .person,
 .mentor .mentor-2 .person,
@@ -526,7 +536,7 @@ body {
   display: none;
   color: #fff;
   font-size: 16px;
-  background-color: rgba(36, 113, 221, 0.9);
+  background-color: rgba(36, 113, 221, 0.7);
   cursor: pointer;
   line-height: 28px;
 }
@@ -588,6 +598,7 @@ body {
   top: 18%;
   left: 35%;
   z-index: 998;
+  box-shadow: 0 5px 10px #333;
 }
 .mentor .mentor-4 {
   left: 50px;
@@ -602,7 +613,7 @@ body {
   margin-top: 50px;
   transform: translateY(200px);
   opacity: 0;
-  transition: all .5s;
+  transition: all 1.5s;
 }
 .slide-4 .info .title {
   float: right;
@@ -674,7 +685,7 @@ body {
 }
 
 .slide-5 .center a {
-  background-color: #116fe1;
+  background-color: rgba(17, 111, 225, 0.7);
   color: #fff;
   opacity: 0;
   transition: all 1.3s;
@@ -683,7 +694,7 @@ body {
   margin-top: 50px;
   transform: translateY(200px);
   opacity: 0;
-  transition: all .5s;
+  transition: all 1.5s;
 }
 .slide-5 .center-element {
   width: 710px;
