--- a/sass/common.scss
+++ b/sass/common.scss
@@ -20,14 +20,14 @@ body {
     width: 242px;
     height: 61px;
     line-height: 61px;
-    color: #116fe1;
+    color: #fff;
     font-size: 28px;
     position: absolute;
     display: block;
     bottom: 20%;
     left: 50%;
     margin-left: - 121px;
-    background-color: #fff;
+    background-color: rgba(17, 111, 225, 0.7);
     border-radius: 30px;
     text-align: center;
     text-decoration: none;
@@ -80,6 +80,7 @@ body {
 
 .swiper-slide {
   position: relative;
+  overflow: hidden;
 }
 
 .bg {
@@ -120,6 +121,7 @@ body {
     .title {
       color: #ff5f4d;
       font-size: 48px;
+      transition: all 1.2s;
     }
   }
 }
@@ -256,7 +258,7 @@ body {
   bottom: 34%;
   right: 13%;
   animation: planet 25s ease-in-out infinite;
-  z-index: 999;
+  z-index: -1;
   transition: all .5s;
 }
 
@@ -295,7 +297,7 @@ body {
   background-color: #000b28;
   transform: translate(-476px, -87px);
   opacity: 0;
-  transition: all 0.5s;
+  transition: all 1s;
 }
 
 .envelope {
@@ -326,7 +328,7 @@ body {
   opacity: 0;
   line-height: 2;
   text-align: center;
-  transition: all 0.5s;
+  transition: all 1.2s;
   p {
     line-height: 1.5;
   }
@@ -354,7 +356,7 @@ body {
     margin-top: 50px;
     transform: translateY(200px);
     opacity: 0;
-    transition: all 0.5s;
+    transition: all 1.5s;
   }
 }
 
@@ -368,22 +370,26 @@ body {
 }
 
 .mentor {
-  width: 700px;
-  height: 600px;
+  width: 630px;
+  height: 540px;
   position: absolute;
   top: 50%;
   left: 50%;
-  margin-left: -350px;
-  margin-top: -250px;
+  transform: translate(-50%, -40%);
   .mentor-1,
   .mentor-2,
   .mentor-3,
   .mentor-4,
   .mentor-5 {
     position: absolute;
+    float:left;
     overflow: hidden;
-    width: 200px;
-    height: 250px;
+    width: 180px;
+    height: 225px;
+    img{
+      width: 100%;
+      height: 100%;
+    }
     .person {
       top: 0;
       left: 0;
@@ -393,7 +399,7 @@ body {
       display: none;
       color: #fff;
       font-size: 16px;
-      background-color: rgba(36, 113, 221, 0.9);
+      background-color: rgba(36, 113, 221, 0.7);
       cursor: pointer;
       line-height: 28px;
       .person-inner {
@@ -424,8 +430,8 @@ body {
     }
   }
   .mentor-1 {
-    top: 20px;
-    left: 20px;
+    top:20px;
+    left:20px;
   }
   .mentor-2 {
     top: 40px;
@@ -435,6 +441,7 @@ body {
     top: 18%;
     left: 35%;
     z-index: 998;
+    box-shadow: 0 5px 10px #333;
   }
   .mentor-4 {
     left: 50px;
@@ -444,6 +451,7 @@ body {
     right: 20px;
     bottom: 20px;
   }
+
 }
 
 .slide-4 {
@@ -451,7 +459,7 @@ body {
     margin-top: 50px;
     transform: translateY(200px);
     opacity: 0;
-    transition: all .5s;
+    transition: all 1.5s;
     .title {
       float: right;
     }
@@ -529,8 +537,8 @@ body {
 
 .slide-5 {
   .center{
-    a{
-      background-color: #116fe1;
+    a {
+      background-color: rgba(17, 111, 225, 0.7);
       color: #fff;
       opacity:0;
       transition: all 1.3s;
@@ -540,7 +548,7 @@ body {
     margin-top: 50px;
     transform: translateY(200px);
     opacity: 0;
-    transition: all .5s;
+    transition: all 1.5s;
   }
   .center-element {
     width: 710px;
