--- a/sass/_reset.scss
+++ b/sass/_reset.scss
@@ -136,6 +136,37 @@ select {
 input,
 textarea,
 select {
-  *font-size: 100%
+  *font-size: 100%;
 }
 
+input,
+textarea,
+select {
+  -webkit-appearance: none;
+  border-radius: none;
+  border: none;
+}
+
+input,
+textarea {
+  &:focus {
+    outline: none;
+  }
+  &::-webkit-input-placeholder {
+    color: #666;
+    text-overflow: ellipsis;
+  }
+  &:-moz-placeholder {
+    color: #666 !important;
+    text-overflow: ellipsis;
+  }
+  &::-moz-placeholder {
+    color: #666 !important;
+    text-overflow: ellipsis;
+  }
+  /* for the future */
+  *:-ms-input-placeholder {
+    color: #666 !important;
+    text-overflow: ellipsis;
+  }
+}
