--- a/sass/common.scss
+++ b/sass/common.scss
@@ -1,246 +1,92 @@
 // 重构包RESET样式
 @import "reset";
+@import "animation";
 html,
 body {
+  width: 100%;
+  height: 100%;
   position: relative;
+  font-family: 'Microsoft YaHei', 'Avenir', Helvetica, Arial, sans-serif;
+}
+
+html {
+  background: url(../image/bg.jpg) no-repeat;
+  background-size: cover;
 }
 
 #content {
   width: 100%;
   height: 100%;
-  position: relative;
-  font-family: 'Microsoft YaHei', 'Avenir', Helvetica, Arial, sans-serif;
-  position: fixed;
-}
-
-.center {
-  width: 1200px;
-  margin: 0 auto;
-  a {
-    width: 242px;
-    height: 61px;
-    line-height: 61px;
-    color: #116fe1;
-    font-size: 28px;
-    position: absolute;
-    display: block;
-    bottom: 20%;
-    left: 50%;
-    margin-left: - 121px;
-    background-color: #fff;
-    border-radius: 30px;
-    text-align: center;
-    text-decoration: none;
-    z-index: 9999;
+  font-size: 0.13rem;
+  .title {
+    color: #ff5f4d;
+    font-size: 0.24rem;
+    line-height: 1.5;
+    transform: translateY(10px);
+    opacity: 0;
+    transition: all 1s;
+  }
+  .content {
+    width: 3rem;
+    line-height: 1.5;
+    transform: translateY(20px);
+    opacity: 0;
+    transition: all 1s;
+  }
+  .letter-paper {
+    .content {
+      width: 100%;
+    }
   }
 }
 
 .logo {
-  margin-top: 30px;
-}
-
-.slide {
-  width: 13px;
-  height: 300px;
+  width: 100%;
   position: absolute;
-  left: 95px;
-  top: 50%;
-  margin-top: -150px;
-  background: url(../image/slide.png) no-repeat;
-  z-index: 99;
-  img {
-    position: absolute;
-    left: 0;
-    top: 0;
-    transform: translateY(160px);
-    animation: slideIcon 2s ease infinite;
-  }
-}
-
-.wrapper {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  .swiper-wrapper {
-    height: 100%;
-  }
-}
-
-#canvas {
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-  vertical-align: baseline;
-  position: fixed;
   top: 0;
-  left: 0;
-  z-index: -1;
-  opacity: 0.3;
+  z-index: 999;
+  display: -webkit-inline-flex;
+  display: -moz-inline-flex;
+  display: -ms-inline-flex;
+  display: -o-inline-flex;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  // background-color: rgba(0, 0, 0, 0.5);
+  img {
+    width: 2.88rem;
+    height: 0.38rem;
+  }
 }
 
 .swiper-slide {
+  overflow: hidden;
   position: relative;
+}
+
+.center {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .bg {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: url(../image/bg.jpg) no-repeat;
-  background-position: center;
-  background-size: cover;
-  z-index: -2;
-}
-
-.nav {
-  position: relative;
-  .bg {
-    position: absolute;
-    background: url(../image/bg-nav.png) no-repeat;
-    background-size: cover;
-    opacity: 0.75;
-  }
-}
-
-.swiper-slide {
-  position: relative;
-  min-width: 1200px;
-  .bg {
-    background: none;
-    img {
-      width: 100%;
-      height: 100%;
-    }
-  }
-  .info {
-    color: #031540;
-    font-size: 26px;
-    .title {
-      color: #ff5f4d;
-      font-size: 48px;
-    }
-  }
-}
-
-// slide-1 上悬浮小元素较多
-.slide-1 {
-  overflow: hidden;
-  .bg-nav {
-    position: absolute;
-    top: 0;
-    left: 0;
+  z-index: -1;
+  img {
     width: 100%;
     height: 100%;
   }
-  .plane {
-    width: 3%;
-    position: absolute;
-    top: 10%;
-    left: 30%;
-    animation: leftRight 15s ease-in-out infinite;
-  }
-  .console-boat {
-    width: 19%;
-    position: absolute;
-    bottom: -2%;
-    right: 38%;
-    animation: updown 15s ease-in-out infinite;
-    z-index: 998;
-  }
-  .headset {
-    width: 7%;
-    position: absolute;
-    bottom: 20%;
-    right: 38%;
-    animation: updown 12s ease-in-out infinite;
-    z-index: 997;
-  }
-  .riflemen {
-    width: 10%;
-    position: absolute;
-    bottom: -10%;
-    left: 30%;
-    animation: updown 10s ease-in-out infinite;
-    z-index: 994;
-  }
-  .tablets {
-    width: 34%;
-    position: absolute;
-    bottom: -2%;
-    right: 20%;
-    animation: updown 27s ease-in-out infinite;
-    z-index: 992;
-  }
-  .robot-2 {
-    width: 7%;
-    position: absolute;
-    bottom: 14%;
-    right: 25%;
-    animation: updown 27s ease-in-out infinite;
-    z-index: 993;
-  }
-  .keyboard {
-    width: 10%;
-    position: absolute;
-    bottom: -5%;
-    left: 0;
-    animation: updown 6s ease-in-out infinite;
-    z-index: 995;
-  }
 }
 
-.slide-2 {
-  .bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateX(100%);
-    opacity: 0;
-    transition: all .3s;
-  }
-}
-
-.slide-3 {
-  .bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateX(-100%);
-    opacity: 0;
-    transition: all .3s;
-  }
-  .slide {
-    background: url(../image/slide-dark.png) no-repeat;
-  }
-}
-
-.slide-4 {
-  .bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateX(100%);
-    opacity: 0;
-    transition: all .3s;
-  }
-}
-
-.slide-5 {
-  .bg {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateX(-100%);
-    opacity: 0;
-    transition: all .3s;
-  }
-  .slide {
-    background: url(../image/slide-dark.png) no-repeat;
-  }
-}
-
+@import "slide1";
+@import "slide2";
+@import "slide3";
+@import "slide4";
+@import "slide5";
+@import "slide6";
 .updown {
   animation: updown 1s ease-in 1;
 }
@@ -250,115 +96,50 @@ body {
   opacity: 1 !important;
 }
 
+#canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+}
+
 .planet {
   width: 13%;
   position: fixed;
   bottom: 34%;
   right: 13%;
   animation: planet 25s ease-in-out infinite;
-  z-index: 999;
+  z-index: -1;
   transition: all .5s;
 }
 
 .robot {
-  width: 15%;
+  width: 1rem;
   position: fixed;
-  bottom: 3%;
-  left: 8%;
+  bottom: 0.4rem;
+  left: 0.05rem;
   animation: updown 23s ease-in-out infinite;
   z-index: 996;
   transition: all .5s;
 }
 
 .robot-second {
-  width: 12%;
-  bottom: 2%;
-  left: 3%;
+  width: 1.5rem;
+  bottom: 0.1rem;
+  left: 0.2rem;
 }
 
 .planet-second {
-  width: 15%;
-  right: -2%;
-  bottom: 38%;
+  width: 2rem;
+  right: -0.7rem;
+  top: 0.1rem;
 }
 
 .undis {
   z-index: -1;
 }
 
-.letter {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 950px;
-  height: 574px;
-  background-color: #000b28;
-  transform: translate(-476px, -87px);
-  opacity: 0;
-  transition: all 0.5s;
-}
-
-.envelope {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 532px;
-  z-index: 999;
-  img {
-    width: 100%;
-  }
-}
-
-.letter-fadeIn {
-  transform: translate(-476px, -287px);
-  opacity: 1;
-}
-
-.letter-paper {
-  position: absolute;
-  width: 800px;
-  height: 427px;
-  left: 50%;
-  bottom: 200px;
-  transform: translate(-400px, 110px);
-  background-color: #fff;
-  opacity: 0;
-  line-height: 2;
-  text-align: center;
-  transition: all 0.5s;
-  p {
-    line-height: 1.5;
-  }
-  .title {
-    display: inline-block;
-    margin-top: 40px;
-    margin-bottom: 30px;
-    z-index: 998;
-    line-height: 2;
-    border-bottom: 1px solid #eee;
-  }
-}
-
-.paper-pushUp {
-  transform: translate(-400px, 0px);
-  opacity: 1;
-}
-
-.slide-3 {
-  .center {
-    padding: 0 66px;
-  }
-  .info {
-    font-size: 18px;
-    margin-top: 50px;
-    transform: translateY(200px);
-    opacity: 0;
-    transition: all 0.5s;
-  }
-}
-
-.info-fadeIn {
+.fadeInUp {
   transform: translateY(0) !important;
   opacity: 1 !important;
 }
@@ -367,229 +148,17 @@ body {
   opacity: 1 !important;
 }
 
-.mentor {
-  width: 700px;
-  height: 600px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-left: -350px;
-  margin-top: -250px;
-  .mentor-1,
-  .mentor-2,
-  .mentor-3,
-  .mentor-4,
-  .mentor-5 {
-    position: absolute;
-    overflow: hidden;
-    width: 200px;
-    height: 250px;
-    .person {
-      top: 0;
-      left: 0;
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      display: none;
-      color: #fff;
-      font-size: 16px;
-      background-color: rgba(36, 113, 221, 0.9);
-      cursor: pointer;
-      line-height: 28px;
-      .person-inner {
-        width:90%;
-        position: absolute;
-        display:inline-block;
-        bottom:20px;
-        left:10px;
-      }
-      .name {
-        font-size: 18px;
-      }
-      .job {
-        font-size: 12px;
-      }
-      .intor {
-        font-size: 16px
-        // position: absolute;
-        // bottom:10px;
-
-      }
-    }
-    &:hover {
-      z-index: 999;
-      .person {
-        display: flex;
-      }
-    }
+.drop{
+  width: 0.2rem;
+  position: fixed;
+  left:50%;
+  transform: translateX(-50%);
+  bottom:0.05rem;
+  z-index:99999;
+  img{
+    width: 100%;
   }
-  .mentor-1 {
-    top: 20px;
-    left: 20px;
-  }
-  .mentor-2 {
-    top: 40px;
-    right: 60px;
-  }
-  .mentor-3 {
-    top: 18%;
-    left: 35%;
-    z-index: 998;
-  }
-  .mentor-4 {
-    left: 50px;
-    bottom: 40px;
-  }
-  .mentor-5 {
-    right: 20px;
-    bottom: 20px;
-  }
-}
-
-.slide-4 {
-  .info {
-    margin-top: 50px;
-    transform: translateY(200px);
-    opacity: 0;
-    transition: all .5s;
-    .title {
-      float: right;
-    }
-  }
-  .line {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 710px;
-    height: 29px;
-    margin-left: -355px;
-    margin-top: -15px;
-    opacity: 0;
-    transition: all .3s;
-  }
-}
-
-.process {
-  position: absolute;
-  width: 1068px;
-  height: 300px;
-  padding: 0 23px;
-  top: 50%;
-  left: 50%;
-  margin-left: -534px;
-  margin-top: -150px;
-  .process-item {
-    position: relative;
-    float: left;
-    margin-left: 135px;
-    margin-top: 64px;
-    opacity: 0;
-    transform: translateY(200px);
-    &:first-child {
-      margin-left: 0;
-    }
-    p {
-      position: absolute;
-      left: -52px;
-      width: 260px;
-      font-size: 20px;
-      text-align: center;
-      span {
-        font-size: 10px;
-      }
-    }
-  }
-  .item-1,
-  .item-2 {
-    p {
-      color: #fff;
-      bottom: -30px;
-    }
-  }
-  .item-3,
-  .item-4 {
-    p {
-      color: #01193b;
-      top: -100px;
-    }
-  }
-  .item-1 {
-    transition: all .3s;
-  }
-  .item-2 {
-    transition: all .6s;
-  }
-  .item-3 {
-    transition: all .9s;
-  }
-  .item-4 {
-    transition: all 1.2s;
-  }
-}
-
-.slide-5 {
-  .center{
-    a{
-      background-color: #116fe1;
-      color: #fff;
-      opacity:0;
-      transition: all 1.3s;
-    }
-  }
-  .title {
-    margin-top: 50px;
-  }
-  .center-element {
-    width: 710px;
-    height: 320px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-left: -355px;
-    margin-top: -160px;
-    .element {
-      position: absolute;
-      opacity: 0;
-    }
-    .item-1 {
-      right: 0;
-      bottom: 0;
-      transition: all .3s;
-    }
-    .item-2 {
-      top: 0;
-      left: 135px;
-      transition: all .8s;
-    }
-    .item-3 {
-      left: 0;
-      bottom: 0;
-      transition: all .6s;
-    }
-    .item-4 {
-      top: 0;
-      right: 135px;
-      transition: all .9s;
-    }
-    .item-5 {
-      bottom: 0;
-      left: 50%;
-      margin-left: -70px;
-      transition: all 1.2s;
-    }
-    .left.element {
-      top: 31%;
-      margin-top: -100px;
-      left: -208px;
-      transition: all 1.2s;
-    }
-    .right.element {
-      top: 28%;
-      margin-top: -100px;
-      right: -235px;
-      transition: all .2s;
-    }
-  }
+  animation: down 2s ease infinite;
 }
 
 @keyframes slideIcon {
@@ -606,13 +175,32 @@ body {
 
 @keyframes updown {
   0% {
-    transform: translateY(-20px);
+    transform: translateY(-10px);
   }
   50% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
+}
+
+@keyframes down{
+  0% {
+    transform: translateY(-20px);
+    opacity: 0;
+  }
+  80% {
     transform: translateY(20px);
+    opacity: 1;
+  }
+  81%{
+    transform: translateY(20px);
+    opacity: 0;
   }
   100% {
     transform: translateY(-20px);
+    opacity: 0;
   }
 }
 
@@ -667,5 +255,15 @@ body {
   100% {
     transform: translateY(-20px);
     transform: rotateZ(0deg);
+  }
+}
+
+
+@keyframes mentorAnimation{
+  0%{
+    transform:trans
+  }
+  100%{
+    
   }
 }
