--- a/sass/_slide3.scss
+++ b/sass/_slide3.scss
@@ -19,9 +19,10 @@
     transition: all .3s;
   }
   .slide {
-    background: url(../image/slide-dark.png) no-repeat;
+    background: url("//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/slide-dark.png") no-repeat;
   }
   .content{
+    text-align: justify;
     margin-top:0.1rem;
   }
 }
@@ -57,7 +58,6 @@
       height: 0.6rem;
       display: none;
       color: #fff;
-      font-size: 0.11rem;
       background-color: rgba(36, 113, 221, 0.9);
       cursor: pointer;
       line-height: 24px;
@@ -74,8 +74,7 @@
         font-size: 0.14rem;
       }
       .intor {
-        font-size: 0.11rem; // position: absolute;
-        // bottom:10px;
+        font-size: 0.10rem; 
       }
     }
     &:hover {
@@ -86,24 +85,24 @@
     }
   }
   .mentor-1 {
-    width: 1.1rem;
-    height: 1.37rem;
+    width: 1.25rem;
+    height: 1.6rem;
     top: 0.5rem;
     left: 0.025rem;
     transition: all .3s;
   }
   .mentor-2 {
-    width: 1.58rem;
-    height: 1.97rem;
+    width: 1.25rem;
+    height: 1.6rem;
     top: 0;
     right: 0;
     transition: all .3s .2s;
   }
   .mentor-3 {
-    width: 1.61rem;
-    height: 2rem;
+    width: 1.25rem;
+    height: 1.6rem;
     top: 1.16rem;
-    left: 0.67rem;
+    left: 1rem;
     z-index: 998;
     transition: all 1s .4s;
   }
@@ -115,9 +114,9 @@
     transition: all 0.3s .4s;
   }
   .mentor-5 {
-    width: 1.3rem;
-    height: 1.52rem;
-    right: 0.04rem;
+    width: 1.25rem;
+    height: 1.6rem;
+    right: -0.1rem;
     bottom: 0.26rem;
     transition: all 0.3s .3s;
   }
