--- a/sass/_slide4.scss
+++ b/sass/_slide4.scss
@@ -9,26 +9,30 @@
   }
   .info {
     position: absolute;
+    left:0;
     top: 0.3rem;
     width: 100%;
     display: inline-block;
     text-align: center;
     transition: all .5s;
   }
+  .title{
+    text-align:center;
+  }
 }
 
 .process {
   position: absolute;
-  width: 3.32rem;
-  height: 3.68rem;
-  top: 1.25rem;
+  width: 3rem;
+  height: 3.32rem;
+  top: 1.5rem;
   left: 50%;
-  margin-left: -1.66rem;
+  transform:translateX(-50%);
   display: flex;
   justify-content: center;
   .process-item {
-    width: 1.14rem;
-    height: 1.275rem;
+    width: 0.9rem;
+    height: 1.02rem;
     position: absolute;
     opacity: 0;
     img {
@@ -36,7 +40,11 @@
     }
     p {
       position: absolute;
-      font-size: 0.14rem;
+      font-size: 0.12rem;
+      width:1.2rem;
+      left:50%;
+      transform: translateX(-50%);
+      text-align:center;
       span {
         font-size: 12px;
       }
@@ -45,54 +53,48 @@
   .item-1 {
     top: 0;
     left: 50%;
-    margin-left: -0.57rem;
+    margin-left: -0.45rem;
     p {
-      top: 0.45rem;
-      width: 0.62rem;
-      left: -0.7rem;
+      color:#fff;
+      top: -0.35rem;
     }
-    transition: all .3s;
+    transition: all .6s .1s;
   }
   .item-2 {
+    color:#fff;
     top: 1.17rem;
     right: 0;
-    transition: all .6s;
+    transition: all .6s .2s;
     p {
-      top: -0.5rem;
+      top: -0.48rem;
       text-align: center;
-      left: 0.17rem;
     }
   }
   .item-3 {
     top: 1.17rem;
     left: 0;
+    transition: all .6s .3s;
     p {
       line-height: 0.16rem;
-      color: #fff;
-      width: 1.12rem;
-      top: 1.35rem;
-      left: -0.05rem;
-      transition: all .9s;
+      top: 1.1rem;
       span {
+        display:flex;
+        width: 1.5rem;
+        justify-content: start;
         position: absolute;
         top: 0.21rem;
         line-height: 0.03rem;
         font-size: 0.05rem;
       }
-      transition: all .9s;
     }
   }
   .item-4 {
     bottom: 0;
     left: 50%;
-    margin-left: -0.57rem;
-    transition: all 1.2s;
+    margin-left: -0.45rem;
+    transition: all .6s .4s;
     p {
-      color: #fff;
-      top: 1.35rem;
-      width: 3.75rem;
-      left: 50%;
-      margin-left: -1.875rem;
+      top: 1.1rem;
       text-align: center;
     }
   }
