--- a/sass/_slide5.scss
+++ b/sass/_slide5.scss
@@ -8,11 +8,12 @@
     transition: all .3s;
   }
   .slide {
-    background: url(../image/slide-dark.png) no-repeat;
+    background: url("//game.gtimg.cn/images/gameinstitute/act/a20170601nextidea/slide-dark.png") no-repeat;
   }
   .info {
     position: absolute;
     top: 0.3rem;
+    left:0;
     width: 100%;
     display: inline-block;
     text-align: center;
@@ -43,7 +44,7 @@
   .center-element {
     position: absolute;
     width: 2.84rem;
-    height: 3.32rem;
+    height: 3.52rem;
     top: 1.24rem;
     left: 0.45rem;
     .element {
@@ -59,27 +60,27 @@
     .item-1 {
       top:0;
       left:0;
-      transition: all .3s;
+      transition: all .6s .1s;
     }
     .item-2 {
-      top:0;
-      right:0;
-      transition: all .8s;
+      top:0.1rem;
+      right:-0.1rem;
+      transition: all .6s .2s;
     }
     .item-3 {
       top: 1.06rem;
       left:0.87rem;
-      transition: all .6s;
+      transition: all .6s .3s;
     }
     .item-4 {
-      left:0;
-      bottom:0;
-      transition: all .9s;
+      left:-0.1rem;
+      bottom:0.1rem;
+      transition: all .6s .4s;
     }
     .item-5 {
       bottom: 0;
       right:0;
-      transition: all 1.2s;
+      transition: all .6s .5s;
     }
   }
 }
