--- a/src/views/index/index.scss
+++ b/src/views/index/index.scss
@@ -9,7 +9,7 @@
     width: 100%;
     height: 100%;
     z-index: -1;
-    background: url(//game.gtimg.cn/images/gameinstitute/act/a20170522nextidea/bg.jpg) no-repeat;
+    background: url('//game.gtimg.cn/images/gameinstitute/act/a20170522nextidea/bg.jpg') no-repeat;
     background-size: cover;
     background-pointer: center;
   }
