--- a/src/views/activityItems/index.scss
+++ b/src/views/activityItems/index.scss
@@ -28,8 +28,8 @@
       vertical-align: bottom
     }
     .link {
-      width: 100%;
       height: 50px;
+      padding:0 15px;
       background-color: #fff;
       color: #051740;
       a {
